# 276-phase2

./: .gitmodules  et --hard 992ad08  pyproject.toml  requirements.txt
.github/workflows/: coverage-reporter.yml  python-app.yml
scripts/: build.sh  deploy.sh
src/: __init__.py  main.py
src/game/: __init__.py  analytics_ui.py  daily.py  game_ui.py  leaderboard_ui.py  survival.py  survival_ui.py
src/local_repos/: users.py
src/phase2/: account_ui.py  country.py  friends.py  leaderboard.py  round.py  statistics.py
src/phase2/api_clients/: auth.py  friends.py  users.py
src/user_service/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
src/user_service/.github/workflows/: ci.yml
src/user_service/alembic/: env.py
src/user_service/alembic/versions/: 3e588a47adb0_create_users_table.py  4684e4631ebb_added_email_password_and_id_to_users.py  7d225675e312_.py
src/user_service/src/admin/: main.py
src/user_service/src/event_service/: api.py  models.py  schemas.py  test_events.py
src/user_service/src/shared/: database.py
src/user_service/src/user_service/: api.py  test_api.py
src/user_service/src/user_service/analytics/: redis.py
src/user_service/src/user_service/models/: auth.py  friends.py  session_analytics.py  test_auth.py  test_friends.py  test_session_analytics.py  test_user.py  user.py
tests/: test_country.py  test_daily.py  test_game_ui.py  test_leaderboard.py  test_leaderboard_ui.py  test_main.py  test_statistics.py  test_survival_ui.py
