[project]
name = "user_service"
version = "0.0.1"
authors = [
  { name="Isaac Liu", email="itl3@sfu.ca" },
  { name="Sam McGarry", email="sma256@sfu.ca" },
  { name="Jun Yi Fan", email="jyf5@sfu.ca" },
  { name="Ben Samy", email="bsa125@sfu.ca" },
]
description = "A small user service"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "alembic>=1.16.5",
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "joserfc>=1.4.0",
    "nicegui>=2.24.2",
    "psycopg2-binary>=2.9.10",
    "psycopg>=3.2.12",
    "pydantic>=2.11.9",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-postgresql>=7.0.2",
    "sqlalchemy>=2.0.43",
    "bcrypt>=5.0.0",
    "pillow>=10.0.0",
    "redis>=5.0.0",
    "ruff>=0.14.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.coverage.run]
source = [
    "./src"
]
omit = [
    "__init__.py", # omit any __init__.py files
    "test*.py", # omit any .py files beginning with 'test'
    "src/shared/database.py", # omit the infrastructure code in database.py
    "src/admin/main.py" # omit the main file in admin
]
